# nn-demo

./: README.md  nn-demo.ipynb  pyproject.toml
