[tool.poetry]
name = "nn-demo"
version = "0.1.0"
description = ""
authors = ["anselbrandt <ansel@anselbrandt.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
ipykernel = "^6.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
